# feedhook

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: ci.yml  docker.yml
migrations/: 001_init.sql
src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  notifier.rs  poller.rs
web/: app.js  index.html
