[package]
name = "feedhook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.13", features = ["json"] }
feed-rs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
